--- a/style.css
+++ b/style.css
@@ -8,15 +8,21 @@ html, body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-image: url('images/bg-hero-desktop.svg');
-    
     background-color:  rgb(235, 251, 255);
     
 }
 h1{
-    ;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.2;
+   
+}
+p{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.1rem;
+    margin-top: 0px;
 }
 .menu{
+    
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -39,13 +45,16 @@ h1{
     font-size: 1.5rem;
     align-self: center;
     padding: 20px;
+    
 }
 #txt-1 > h1{
     font-family: 'Poppins', sans-serif;
     font-size: 2.5rem;
 }
 #txt-1 > p{
-
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.2rem;
+    font-weight: bold;
 }
 #img-1{
     grid-area: B;
@@ -89,4 +98,9 @@ h1{
 #chamada-acao{
     grid-area: I;
     text-align: center;
+}
+
+#rodape{
+    background-color: rgb(0, 37, 46);
+    color: white;
 }
