--- a/style.css
+++ b/style.css
@@ -8,8 +8,7 @@ html, body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color:  rgb(235, 251, 255);
-    
+    background-color: rgb(220, 234, 238);;
 }
 h1{
     font-family: 'Poppins', sans-serif;
@@ -29,6 +28,24 @@ p{
     margin: 20px;
     margin-bottom: 50px;
 }
+#button-menu{
+    background-color: rgb(255, 255, 255);
+    width: 200px;
+    height: 45px;
+    border-radius: 40px;
+    border: none;
+    font-size: 16px;
+    padding: auto 40px;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    transition-duration: 0;
+}
+#button-1:hover {
+    color: rgb(170, 168, 168);
+    box-shadow: 0 12px 16px 0 #0000003d, 0 17px 50px 0 rgba(0,0,0,0.19);
+}
 #container{
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -40,12 +57,15 @@ p{
     "I I";
     row-gap: 200px;
 }
+.bg{
+    grid-area: A B;
+    background-image: url('images/bg-hero-desktop.svg');
+}
 #txt-1{
     grid-area: A;
     font-size: 1.5rem;
     align-self: center;
     padding: 20px;
-    
 }
 #txt-1 > h1{
     font-family: 'Poppins', sans-serif;
@@ -55,6 +75,25 @@ p{
     font-family: 'Open Sans', sans-serif;
     font-size: 1.2rem;
     font-weight: bold;
+}
+#button-2{
+    background-color: rgb(255, 82, 191);
+    width: 250px;
+    height: 45px;
+    border-radius: 40px;
+    border: none;
+    font-size: 16px;
+    padding: auto 40px;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    transition-duration: 0;
+}
+#button-2:hover {
+    background-color: rgba(255, 82, 192, 0.5);;
+    color: rgba(255, 255, 255, 0.747);
+    box-shadow: 0 12px 16px 0 #0000003d, 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 #img-1{
     grid-area: B;
