--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html, body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: rgb(220, 234, 238);;
+    background-color: rgb(220, 234, 238);
 }
 h1{
     font-family: 'Poppins', sans-serif;
@@ -18,6 +18,7 @@ h1{
 p{
     font-family: 'Open Sans', sans-serif;
     font-size: 1.1rem;
+    color: rgb(136, 134, 134);
     margin-top: 0px;
 }
 .menu{
@@ -136,10 +137,38 @@ p{
 
 #chamada-acao{
     grid-area: I;
-    text-align: center;
+    display: flex;
+    justify-self: center;
 }
+.caixa{
+    text-align: center;
+    font-size: 1.3rem;
+    background-color: rgb(220, 234, 238);
+    width: 750px;
+    height: 210px;
+    border-radius: 17px;
+    position: relative;
+    top: 80px;
+}
+#button-3{
+    background-color: rgb(255, 82, 191);
+    width: 350px;
+    height: 65px;
+    border-radius: 40px;
+    border: none;
+    font-size: 18px;
+    padding: auto 40px;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    transition-duration: 0;
+}
+
 
 #rodape{
     background-color: rgb(0, 37, 46);
     color: white;
+    padding-top: 80px;
+    height: 500px;
 }
