--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -4,28 +4,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
-html, body{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background-color: rgb(220, 234, 238);
-}
-h1{
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.2;
-   
-}
-p{
-    font-family: 'Open Sans', sans-serif;
-    font-size: 1.1rem;
-    color: rgb(136, 134, 134);
-    margin-top: 0px;
-}
-
-
-
-
-
 .menu{
     
     display: flex;
@@ -48,9 +26,8 @@ p{
     display: inline-block;
     transition-duration: 0;
 }
-#button-1:hover {
+
+#button-menu:hover {
     color: rgb(170, 168, 168);
     box-shadow: 0 12px 16px 0 #0000003d, 0 17px 50px 0 rgba(0,0,0,0.19);
 }
-
-
