--- a/css/rodape.css
+++ b/css/rodape.css
@@ -10,7 +10,8 @@ footer{
     font-size: 0.8rem;
     color: white;
     display: flex;
-    height:400px;
+    width: auto;
+    height:auto;
 }
 .box {
     margin-top: 130px;
