--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -39,7 +39,7 @@
             "H"
             "I"
             "J";
-        row-gap: 130px;
+        row-gap: 100px;
     }
     #txt-1{
         grid-area: A;
@@ -81,9 +81,20 @@
         color: rgba(255, 255, 255, 0.747);
         box-shadow: 0 12px 16px 0 #0000003d, 0 17px 50px 0 rgba(0,0,0,0.19);
     }
+    #img-1{
+        grid-area: B;
+        padding: 15px;
+        margin: 10px
+px
+;
+    position: relative;
+    bottom: 90px;
+    }
     #img-1 img{
         display: block;
+        margin-top: 0px;
         margin-left: auto;
-        margin-right: auto
+        margin-right: auto;
+        width: -webkit-fill-available;
     }
 }
