--- a/mobile.css
+++ b/mobile.css
@@ -75,4 +75,15 @@
         height: 45px;
         font-size: 15px;
     }
+    footer{
+        display: grid;
+        grid-template-columns: 373px;
+        grid-template-rows: 1fr;
+        
+        row-gap: 0px;
+    }
+    ul li a {
+        flex-wrap: wrap;
+    }
+    
 }
