--- a/css/rodape.css
+++ b/css/rodape.css
@@ -4,6 +4,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
+
 /*footer{
     background-color: rgba(0, 37, 46, 0.89);
     font-family:'Open Sans', sans-serif;
@@ -70,7 +71,7 @@
 }*/
 
 #rodape{
-    background-color: rgba(0, 37, 46, 0.692);
+    background-color: rgba(0, 37, 46, 0.904);
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 200px 1fr 1fr 1fr 1fr;
@@ -81,11 +82,13 @@
     grid-column: 1 / 2;
     grid-row: 2 / 3;
     height: 20px;
-    align-self: center;
+    align-self: flex-start;
 }
 .lorem{
     grid-column: 1/ 2;
     grid-row: 3 / 4;
+    color: rgb(180, 168, 168);
+    font-size: .9rem;
 }
 .cel{
     grid-column: 1 / 2;
@@ -97,31 +100,34 @@
 }
 .link-1{
     grid-column: 2 / 3;
-    grid-row: 2 / 3
+    grid-row: 3 / 4;
+    text-align: center
 }
 .link-2{
     grid-column: 2 / 3;
-    grid-row: 3 / 4;
+    grid-row: 4 / 5;
+    text-align: center
 }
 .link-3{
     grid-column: 2 / 3;
-    grid-row: 4 / 5;
+    grid-row: 5 / 6;
+    text-align: center
 }
 .link-4{
     grid-column: 3 / 4;
-    grid-row: 2 / 3
+    grid-row: 3 / 4
 }
 .link-5{
     grid-column: 3 / 4;
-    grid-row: 3 / 4;
+    grid-row: 4 / 5;
 }
 .link-6{
     grid-column: 3 / 4;
-    grid-row: 4 / 5;
+    grid-row: 5 / 6;
 }
 .items{
     grid-column: 4 / 5;
-    grid-row: 2 / 3;
+    grid-row: 3 / 4;
 }
 .copy{
     grid-column: 4 / 5;
@@ -129,5 +135,28 @@
 }
 a{
     text-decoration: none;
+    color: rgb(180, 168, 168);
+}
+.icon-link{
+    padding-left: 60px;
+    display: flex;
+    align-items: center;
+}
+.icon::before{
+    content: '';
+    width: 24px;
+    height: 24px;
+    font-size: 24px;
+    position: absolute;
+    left: 24px;
+}
+.icon-lorem::before {
+    content: "\F3E8";
     color: white;
+}
+.icon-cel::before{
+    content: "\f095";
+}
+.icon-email::before{
+    content: "\f0e0";
 }
