--- a/css/rodape.css
+++ b/css/rodape.css
@@ -75,8 +75,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 200px 1fr 1fr 1fr 1fr;
-    
-    
+    font-family:  sans-serif;
 }
 .logo-rodape{
     grid-column: 1 / 2;
@@ -106,17 +105,21 @@
 .link-1{
     grid-column: 2 / 3;
     grid-row: 3 / 4;
-    text-align: center
+    text-align: center;
+    align-self: flex-start;
+    
 }
 .link-2{
     grid-column: 2 / 3;
-    grid-row: 4 / 5;
-    text-align: center
+    grid-row: 3 / 4;
+    text-align: center;
+    align-self: center;
 }
 .link-3{
     grid-column: 2 / 3;
-    grid-row: 5 / 6;
-    text-align: center
+    grid-row: 3 / 4;
+    text-align: center;
+    align-self: end;
 }
 .link-4{
     grid-column: 3 / 4;
@@ -124,19 +127,25 @@
 }
 .link-5{
     grid-column: 3 / 4;
-    grid-row: 4 / 5;
+    grid-row: 3 / 4;
+    align-self: center;
 }
 .link-6{
     grid-column: 3 / 4;
-    grid-row: 5 / 6;
+    grid-row: 3 / 4;
+    align-self: flex-end;
 }
 .items{
     grid-column: 4 / 5;
     grid-row: 3 / 4;
 }
+.items a img{
+    padding: 0px 10px;
+}
 .copy{
     grid-column: 4 / 5;
     grid-row: 5 / 6;
+    font-size: .9rem;
 }
 a{
     text-decoration: none;
