--- a/css/rodape.css
+++ b/css/rodape.css
@@ -151,6 +151,12 @@ a{
     text-decoration: none;
     color: rgb(180, 168, 168);
 }
+a:hover{
+    color: white;
+}
+footer p:hover{
+    color: white;
+}
 .icon-link{
     padding-left: 60px;
     display: flex;
