--- a/mobile.css
+++ b/mobile.css
@@ -48,7 +48,7 @@
         grid-area: C;
     }
     #img-2 img{
-        width: 80vw
+        width: 80vw;
     }
     #txt-2{
         grid-area: D;
@@ -57,7 +57,7 @@
     #img-3{
         grid-area: E;
     }
-    article #img-3 img{
+    #img-3 img {
         width: 80vw;
     }
     #txt-3{
