--- a/mobile.css
+++ b/mobile.css
@@ -143,7 +143,7 @@
     .copy{
         grid-area: M;
         text-align: center;
-        align-self: flex-end;
+        align-items: flex-end;
     }
   
 
