--- a/mobile.css
+++ b/mobile.css
@@ -143,8 +143,9 @@
     .copy{
         grid-area: M;
         text-align: center;
-        align-items: flex-end;
+        align-self: center;
     }
+
   
 
 }
