--- a/mobile.css
+++ b/mobile.css
@@ -143,9 +143,11 @@
     .copy{
         grid-area: M;
         text-align: center;
+        
+    }
+    p .copy{
         align-self: center;
     }
-
   
 
 }
