--- a/mobile.css
+++ b/mobile.css
@@ -13,7 +13,7 @@
     }
     #button-menu{
         width: 100px;
-        height: 30px;
+        height: auto;
         font-size: 0.9rem
     }
     #container{
